Fix documentation not not suck